<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="usermail">display user mail here</string>
    <string name="restaurant_default_description">restaurant_default_description</string>
    <string name="Create_new_restaurant">Create new restaurant </string>
    <string name="title_activity_maps">Map</string>
    <string name="addrestaurant_name">Name :</string>
    <string name="addrestaurant_tel">Tel :</string>
    <string name="addrestaurant_description">Description :</string>
    <string name="addrestautant_addLocation">Add location</string>
    <string name="addrestaurant_open">Open</string>
    <string name="addrestaurant_Close">Close</string>
    <string name="title_activity_maps_picker">Map</string>
    <string name="noItemFound_bigmsg">No Restaurant Found</string>
    <string name="Remember_me_text">Remember me </string>
    <string name="Add_restaurant_title">New restaurant</string>
    <string name="addrestaurant_btn_text">Let\'s go</string>
</resources>